@@ -1,11 +1,8 @@
 package org.reldb.relang.core;
 
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
-import java.util.Vector;
-import java.util.Map.Entry;
 
 import org.eclipse.jface.action.ContributionItem;
 import org.eclipse.jface.dialogs.MessageDialog;
@@ -28,18 +25,13 @@ import org.eclipse.nebula.widgets.nattable.edit.editor.CheckBoxCellEditor;
 import org.eclipse.nebula.widgets.nattable.edit.editor.MultiLineTextCellEditor;
 import org.eclipse.nebula.widgets.nattable.edit.editor.TextCellEditor;
 import org.eclipse.nebula.widgets.nattable.edit.gui.ICellEditDialog;
-import org.eclipse.nebula.widgets.nattable.export.ExportConfigAttributes;
-import org.eclipse.nebula.widgets.nattable.export.command.ExportCommand;
-import org.eclipse.nebula.widgets.nattable.extension.poi.HSSFExcelExporter;
 import org.eclipse.nebula.widgets.nattable.grid.GridRegion;
 import org.eclipse.nebula.widgets.nattable.grid.layer.DefaultGridLayer;
 import org.eclipse.nebula.widgets.nattable.layer.DataLayer;
-import org.eclipse.nebula.widgets.nattable.command.StructuralRefreshCommand;
 import org.eclipse.nebula.widgets.nattable.layer.ILayerListener;
 import org.eclipse.nebula.widgets.nattable.layer.LabelStack;
 import org.eclipse.nebula.widgets.nattable.layer.LayerUtil;
 import org.eclipse.nebula.widgets.nattable.layer.cell.IConfigLabelAccumulator;
-import org.eclipse.nebula.widgets.nattable.layer.cell.ILayerCell;
 import org.eclipse.nebula.widgets.nattable.layer.event.CellVisualChangeEvent;
 import org.eclipse.nebula.widgets.nattable.layer.event.ILayerEvent;
 import org.eclipse.nebula.widgets.nattable.painter.cell.CheckBoxPainter;
@@ -48,8 +40,6 @@ import org.eclipse.nebula.widgets.nattable.painter.cell.TextPainter;
 import org.eclipse.nebula.widgets.nattable.painter.cell.decorator.BeveledBorderDecorator;
 import org.eclipse.nebula.widgets.nattable.painter.cell.decorator.CellPainterDecorator;
 import org.eclipse.nebula.widgets.nattable.painter.cell.decorator.LineBorderDecorator;
-import org.eclipse.nebula.widgets.nattable.resize.command.InitializeAutoResizeColumnsCommand;
-import org.eclipse.nebula.widgets.nattable.resize.command.InitializeAutoResizeRowsCommand;
 import org.eclipse.nebula.widgets.nattable.selection.ITraversalStrategy;
 import org.eclipse.nebula.widgets.nattable.selection.MoveCellSelectionCommandHandler;
 import org.eclipse.nebula.widgets.nattable.selection.command.ClearAllSelectionsCommand;
@@ -65,47 +55,27 @@ import org.eclipse.nebula.widgets.nattable.tickupdate.TickUpdateConfigAttributes
 import org.eclipse.nebula.widgets.nattable.tooltip.NatTableContentTooltip;
 import org.eclipse.nebula.widgets.nattable.ui.menu.PopupMenuBuilder;
 import org.eclipse.nebula.widgets.nattable.ui.util.CellEdgeEnum;
-import org.eclipse.nebula.widgets.nattable.util.GCFactory;
 import org.eclipse.nebula.widgets.nattable.util.GUIHelper;
-import org.eclipse.nebula.widgets.nattable.viewport.command.ShowColumnInViewportCommand;
 import org.eclipse.nebula.widgets.nattable.viewport.command.ShowRowInViewportCommand;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.events.PaintEvent;
 import org.eclipse.swt.events.PaintListener;
 import org.eclipse.swt.graphics.Point;
-import org.eclipse.swt.layout.FillLayout;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Control;
 import org.eclipse.swt.widgets.Display;
 import org.eclipse.swt.widgets.Event;
 import org.eclipse.swt.widgets.Listener;
 import org.eclipse.swt.widgets.Menu;
-import org.eclipse.swt.widgets.MenuItem;
-import org.eclipse.swt.widgets.Shell;
+import org.reldb.relang.data.GridData;
 import org.reldb.relang.utilities.IconLoader;
 
-public class Grid extends Composite {
+public class Grid {
 
-	private void setup() {
-		setLayout(new FillLayout());
-		setData(new GridDataTemporary());		
-	}
-	
-	public Grid(Shell shell) {
-		super(shell, SWT.NONE);
-		setup();
-	}
-
-	public Grid(Composite composite) {
-		super(composite, SWT.NONE);
-		setup();
-	}
-
-	private GridData data;
-	
 	private NatTable table;
+	
+	protected DataProvider dataProvider;
 
-	private DataProvider dataProvider;
 	private HeadingProvider headingProvider;
 	private DefaultGridLayer gridLayer;
 
@@ -113,39 +83,25 @@ public class Grid extends Composite {
 
 	private int lastRowSelected = -1;
 
+	private GridData data;
+	
+	private Composite parent;
+
 	enum RowAction {
 		UPDATE, INSERT
 	};
-	
-	protected boolean askDeleteConfirm = true;	
-	protected Vector<HashSet<String>> keys = null;
-	
-	private String getAttributeNameAt(int columnIndex) {
-		return data.getColumnNameAt(columnIndex);
-	}
-	
-	private Class<?> getAttributeTypeAt(int columnIndex) {
-		return data.getColumnTypeAt(columnIndex);
-	}
-	
-	private int getColumnCount() {
-		return data.getColumnCount();
-	}
-	
+
 	class HeadingProvider implements IDataProvider {
 		@Override
 		public Object getDataValue(int columnIndex, int rowIndex) {
-			if (columnIndex == Grid.this.getColumnCount())
-				return (rowIndex == 0) ? "+" : "";
-			else
-				switch (rowIndex) {
-				case 0:
-					return getAttributeNameAt(columnIndex);
-				case 1:
-					return getAttributeTypeAt(columnIndex).toString();
-				default:
-					return "";
-				}
+			switch (rowIndex) {
+			case 0:
+				return data.getColumnNameAt(columnIndex);
+			case 1:
+				return data.getColumnTypeAt(columnIndex).getName();
+			default:
+				return "";
+			}
 		}
 
 		@Override
@@ -155,349 +111,40 @@ public class Grid extends Composite {
 
 		@Override
 		public int getColumnCount() {
-			return Grid.this.getColumnCount() + 1;
+			return data.getColumnCount();
 		}
 
 		@Override
 		public int getRowCount() {
-			// return 2 + ((keys == null) ? 0 : (((keys.size() > 1) ? keys.size() - 1 : 0)));
 			return 2;
 		}
 	};
 
-	private class Row {
-		private HashMap<Integer, Object> originalData;
-		private HashMap<Integer, Object> newData;
-		private String error;
-		private RowAction action;
-
-		Row(Tuple tuple) {
-			originalData = new HashMap<Integer, Object>();
-			newData = new HashMap<Integer, Object>();
-			for (int column = 0; column < getColumnCount(); column++)
-				originalData.put(column, tuple.getAttributeValue(getAttributeNameAt(column)));
-			reset();
-			action = RowAction.UPDATE;
-		}
-
-		Row() {
-			originalData = new HashMap<Integer, Object>();
-			newData = new HashMap<Integer, Object>();
-			reset();
-			action = RowAction.INSERT;
-		}
-		
-		Object getOriginalColumnValue(int column) {
-			return originalData.get(column);
-		}
-
-		Object getColumnValue(int column) {
-			Object v = newData.get(column);
-			if (v != null)
-				return v;
-			return getOriginalColumnValue(column);
-		}
-
-		void setColumnValue(int column, Object newValue) {
-			newData.put(column, newValue);
-		}
-
-		boolean isChanged(int columnIndex) {
-			return newData.containsKey(columnIndex);
-		}
-
-		private void reset() {
-			newData.clear();
-			error = null;
-		}
-
-		// Copy new data to original data, and clear new data
-		void committed() {
-			for (Entry<Integer, Object> entry : newData.entrySet())
-				originalData.put(entry.getKey(), entry.getValue());
-			reset();
-			action = RowAction.UPDATE;
-		}
-
-		// Clear new data
-		public void cancelled() {
-			reset();
-		}
-
-		String getError() {
-			return error;
-		}
-
-		void setError(String error) {
-			this.error = error;
-		}
-
-		RowAction getAction() {
-			return action;
-		}
-
-		public boolean isFilled() {
-			for (int column = 0; column < getColumnCount(); column++) {
-				String type = getAttributeTypeAt(column).toString();
-				HashMap<Integer, Object> data = isChanged(column) ? newData : originalData;
-				if (!type.equals("CHARACTER")
-						&& (data.get(column) == null || data.get(column).toString().trim().length() == 0))
-					return false;
-			}
-			return true;
-		}
-	}
-
 	class DataProvider implements IDataProvider {
-
-	//	private HashSet<Integer> processRows = new HashSet<Integer>();
-	//	private Vector<Row> rows = new Vector<Row>();
-		private String headingString;
-
 		public DataProvider() {
-			reload();
-			headingString = getRelHeading();
-		}
-
-		public void reload() {
-//			rows.clear();
-//			Iterator<Tuple> iterator = tuples.iterator();
-//			while (iterator.hasNext())
-//				rows.add(new Row(iterator.next()));
-//			rows.add(new Row());
-//			processRows.clear();
-		}
-
-		public String getError(int row) {
-			return data.getError(row);
-		}
-
-		public boolean isChanged(int columnIndex, int rowIndex) {
-			return data.isChanged(columnIndex, rowIndex);
 		}
 
 		@Override
 		public Object getDataValue(int columnIndex, int rowIndex) {
 			return data.getValue(columnIndex, rowIndex);
 		}
-/*
-		private int getCountOfInsertErrors() {
-			int count = 0;
-			for (int row : processRows)
-				if (getError(row) != null && data.getAction(row) == RowAction.INSERT)
-					count++;
-			return count;
-		}
-*/
+
 		@Override
 		public void setDataValue(int columnIndex, int rowIndex, Object newValue) {
-			System.out.println("Grid: setDataValue at " + columnIndex + ", " + rowIndex + " with " + ((newValue == null) ? "null" : newValue.toString()));
-			if (newValue != null && newValue.toString().length() == 0)
-				newValue = null;
-			if (columnIndex >= getColumnCount() - 1) {
-				System.out.println("Grid: setDataValue in last column. getColumnCount() == " + getColumnCount() + " before extend()");
-				String newName = "A";
-				while (data.hasColumnNamed(newName)) {
-					char newLastChar = (char) (newName.charAt(newName.length() - 1) + 1);
-					if (newLastChar > 'Z') {
-						newLastChar = 'A';
-						newName = newName + newLastChar;
-					}
-					newName = newName.substring(0, newName.length() - 1) + newLastChar;
-				}
-				if (newValue != null) {
-					// add column command here?
-					table.doCommand(new StructuralRefreshCommand());
-					// reselect active cell
-					if (gridLayer != null && dataProvider != null) {
-						table.doCommand(new ShowRowInViewportCommand(gridLayer.getBodyLayer().getViewportLayer(), rowIndex));
-						table.doCommand(new ShowColumnInViewportCommand(gridLayer.getBodyLayer().getViewportLayer(), columnIndex));
-						table.doCommand(new SelectCellCommand(gridLayer.getBodyLayer().getSelectionLayer(), columnIndex, rowIndex, true, true));
-					}
-				}
-				
-	//			processRows.add(rowIndex);
-	//			return;
-			}
 			data.setValue(columnIndex, rowIndex, newValue);
-			/*
-			else
-				rows.get(rowIndex).setColumnValue(columnIndex, newValue.toString());
-			// processRows.add(rowIndex);
-			int lastRowIndex = rows.size() - 1;
-			if (rowIndex == lastRowIndex && getCountOfInsertErrors() == 0) {
-				rows.add(new Row());
-				table.redraw();
-			}
-			*/
 		}
 
 		@Override
 		public int getColumnCount() {
-			return Grid.this.getColumnCount() + 1;
+			return data.getColumnCount();
 		}
 
 		@Override
 		public int getRowCount() {
 			return data.getRowCount();
 		}
-
-		private void refreshAfterUpdate() {
-			table.getDisplay().asyncExec(() -> {
-				if (!table.isDisposed())
-					table.redraw();
-			});
-		}
-
-		private String getTupleDefinitionFor(Row row) {
-			/*
-			String insertAttributes = "";
-			for (int column = 0; column < heading.length; column++) {
-				if (insertAttributes.length() > 0)
-					insertAttributes += ", ";
-				String attributeType = heading[column].getType().toString();
-				Object attributeValueRaw = row.getColumnValue(column);
-				String attributeValue = "";
-				if (attributeValueRaw != null)
-					attributeValue = attributeValueRaw.toString();
-				else if (attributeType.equals("BOOLEAN"))
-					attributeValue = "False";
-				else if (attributeType.equals("RATIONAL"))
-					attributeValue = "0.0";
-				else if (attributeType.equals("INTEGER"))
-					attributeValue = "0";
-				row.setColumnValue(column, attributeValue);
-				if (attributeType.equals("CHARACTER"))
-					attributeValue = "'" + StringUtils.quote(attributeValue) + "'";
-				String attributeName = heading[column].getName();
-				insertAttributes += attributeName + " " + attributeValue;
-			}
-			return "TUPLE {" + insertAttributes + "}";
-			*/
-			return null;
-		}
-/*
-		private synchronized void updateRow(Row row, int rownum) {
-			Heading heading = tuples.getHeading();
-			Tuple newTuple = new Tuple(heading);
-			for (int column = 0; column < heading.getCardinality(); column++) {
-				String attributeName = heading.getAttributeNameAt(column);
-				Object attributeValue = row.getColumnValue(column);
-				newTuple.setAttributeValue(attributeName, attributeValue);
-			}		
-			tuples.replace(rownum, newTuple);
-			row.committed();
-			processRows.remove(rownum);
-			refreshAfterUpdate();
-		}
-*/
-		private synchronized void insertRow(Row row, int rownum) {
-			/*
-			if (relvarName == null) {
-				row.committed();
-				processRows.remove(rownum);
-			} else {
-				String insertQuery = "D_INSERT " + relvarName + " RELATION {" + getTupleDefinitionFor(row) + "};";
-
-				System.out.println("RelvarEditor: query is " + insertQuery);
-
-				ExecuteResult result = connection.execute(insertQuery);
-
-				if (result.failed())
-					row.setError("Unable to insert tuple.\n\nQuery: " + insertQuery + " failed:\n\n"
-							+ result.getErrorMessage());
-				else {
-					row.committed();
-					processRows.remove(rownum);
-				}
-			}
-			 */
-			refreshAfterUpdate();
-		}
-
-		public void deleteRows(Set<Range> selections) {
-			/*
-			if (relvarName == null) {
-				// TODO - implement this
-				System.out.println("Editor: deleteRows() for relvarName == null not implemented yet.");
-			} else {
-				String deleteQuery = "DELETE " + relvarName + " WHERE ";
-				String allKeysSpec = "";
-				int tupleCount = 0;
-				for (Range range : selections)
-					for (int rownum = range.start; rownum < range.end; rownum++) {
-						if (rows.get(rownum).getAction() != RowAction.INSERT) {
-							String keyspec = getKeySelectionExpression(rownum);
-							if (allKeysSpec.length() > 0)
-								allKeysSpec += " OR ";
-							allKeysSpec += "(" + keyspec + ")";
-						}
-						tupleCount++;
-					}
-				deleteQuery += allKeysSpec + ";";
-
-				System.out.println("RelvarEditor: query is " + deleteQuery);
-
-				ExecuteResult result = connection.execute(deleteQuery);
-
-				if (result.failed())
-					MessageDialog.openError(table.getShell(), "DELETE Error",
-							"Unable to delete tuple" + ((tupleCount > 1) ? "s" : "") + ".\n\nQuery: " + deleteQuery
-									+ " failed:\n\n" + result.getErrorMessage());
-				else
-					refresh();
-			}
-			*/
-		}
-
-		public void processDirtyRows() {
-			/*
-			for (Integer rownum : processRows.toArray(new Integer[0]))
-				if (rownum != lastRowSelected) {
-					Row row = rows.get(rownum);
-					if (row.isFilled())
-						switch (row.getAction()) {
-						case INSERT:
-							insertRow(row, rownum);
-							break;
-						case UPDATE:
-							updateRow(row, rownum);
-							break;
-						}
-				}
-				*/
-		}
-
-		public int countDirtyRows() {
-//			return processRows.size();
-			return 0;
-		}
-
-		public boolean isRVA(int columnIndex) {
-			String attributeType = getAttributeTypeAt(columnIndex).toString();
-			return attributeType.startsWith("RELATION ");
-		}
-
-		private String getRelHeading() {
-			// TODO return new TypeInfo(connection).getHeadingDefinition("TYPE_OF(" + getAttributeSource() + ")");
-			return null;
-		}
-
-		public String getLiteral() {
-			/*
-			String body = "";
-			for (int rownum = 0; rownum < rows.size() - 1; rownum++)
-				body += ((body.length() > 0) ? "," : "") + "\n\t" + getTupleDefinitionFor(rows.get(rownum));
-			return headingString + " {" + body + "}";
-			*/
-			return "";
-		}
 	};
 
-	public String getLiteral() {
-		return dataProvider.getLiteral();
-	}
-	
 	class HeaderConfiguration extends AbstractRegistryConfiguration {
 		public void configureRegistry(IConfigRegistry configRegistry) {
 			ImagePainter keyPainter = new ImagePainter(IconLoader.loadIconNormal("bullet_key"));
@@ -536,8 +183,6 @@ public class Grid extends Composite {
 					"error");
 			configRegistry.registerConfigAttribute(CellConfigAttributes.CELL_STYLE, errorStyle, DisplayMode.SELECT,
 					"error");
-			// options for Excel export
-			configRegistry.registerConfigAttribute(ExportConfigAttributes.EXPORTER, new HSSFExcelExporter());
 			// style for selected cells
 			Style selectStyle = new Style();
 			configRegistry.registerConfigAttribute(CellConfigAttributes.CELL_STYLE, selectStyle, DisplayMode.SELECT);
@@ -557,22 +202,10 @@ public class Grid extends Composite {
 			configRegistry.registerConfigAttribute(EditConfigAttributes.OPEN_ADJACENT_EDITOR, Boolean.TRUE,
 					DisplayMode.EDIT);
 			// for each column...
-			for (int column = 0; column < getColumnCount(); column++) {
+			for (int column = 0; column < data.getColumnCount(); column++) {
 				String columnLabel = "column" + column;
-				String type = getAttributeTypeAt(column).toString();
-				if (type.equalsIgnoreCase("INTEGER"))
-					registerIntegerColumn(configRegistry, columnLabel);
-				else if (type.equalsIgnoreCase("RATIONAL"))
-					registerRationalColumn(configRegistry, columnLabel);
-				else if (type.equalsIgnoreCase("CHARACTER"))
-					registerMultiLineEditorColumn(configRegistry, columnLabel);
-				else if (type.equalsIgnoreCase("BOOLEAN"))
-					registerBooleanColumn(configRegistry, columnLabel);
-				else if (type.startsWith("RELATION ")) {
-					String defaultValue = type + " {}";
-					registerRvaColumn(configRegistry, columnLabel, defaultValue);
-				} else
-					registerDefaultColumn(configRegistry, columnLabel);
+				System.out.println("Grid:registerDefaultColumn: " + columnLabel);
+				registerDefaultColumn(configRegistry, columnLabel);
 			}
 		}
 
@@ -614,7 +247,7 @@ public class Grid extends Composite {
 							if (canonicalValue == null)
 								return null;
 							boolean isTrue = canonicalValue.toString().equalsIgnoreCase("True");
-							return new Boolean(isTrue);
+							return Boolean.valueOf(isTrue);
 						}
 
 						@Override
@@ -686,30 +319,6 @@ public class Grid extends Composite {
 			configRegistry.registerConfigAttribute(EditConfigAttributes.EDIT_DIALOG_SETTINGS, editDialogSettings,
 					DisplayMode.EDIT, columnLabel);
 		}
-
-		private void registerRvaColumn(IConfigRegistry configRegistry, String columnLabel, String defaultValue) {
-			// edit or not
-			configRegistry.registerConfigAttribute(EditConfigAttributes.CELL_EDITABLE_RULE, new IEditableRule() {
-				@Override
-				public boolean isEditable(ILayerCell cell, IConfigRegistry configRegistry) {
-					return isEditable(cell.getColumnIndex(), cell.getRowIndex());
-				}
-
-				@Override
-				public boolean isEditable(int columnIndex, int rowIndex) {
-					return dataProvider.isRVA(columnIndex);
-				}
-			}, DisplayMode.EDIT, columnLabel);
-
-			// Button displayed if editable
-			ImagePainter imagePainter = new ImagePainter(IconLoader.loadIcon("table"));
-			configRegistry.registerConfigAttribute(CellConfigAttributes.CELL_PAINTER, imagePainter, DisplayMode.NORMAL,
-					"RVAeditor");
-
-			// Custom dialog box
-			configRegistry.registerConfigAttribute(EditConfigAttributes.CELL_EDITOR,
-					new RvaCellEditor(Grid.this, defaultValue), DisplayMode.EDIT, columnLabel);
-		}
 	}
 
 	class PopupEditorConfiguration extends AbstractRegistryConfiguration {
@@ -722,17 +331,20 @@ public class Grid extends Composite {
 	}
 
 	public void refresh() {
-		if (table != null) {
-			if (dataProvider != null)
-				dataProvider.reload();
-			table.refresh();
-		}
+		table.refresh();
+	}
+
+	public Grid(Composite parent, GridData data) {
+		this.parent = parent;
+		this.data = data;
+		init();
+		refresh();
 	}
 
 	private static class EmptyGridData implements IDataProvider {
 		@Override
 		public Object getDataValue(int columnIndex, int rowIndex) {
-			return "There are no columns.";
+			return "This datasheet is not editable because it has no attributes. Select Design from the toolbar to add attributes.";
 		}
 
 		@Override
@@ -772,30 +384,6 @@ public class Grid extends Composite {
 	}
 
 	protected void init() {
-		if (getColumnCount() == 0) {
-			gridLayer = new DefaultGridLayer(new EmptyGridData(), new EmptyGridHeading());
-			table = new NatTable(this, gridLayer, true);
-			table.addListener(SWT.Paint, new Listener() {
-				@Override
-				public void handleEvent(Event arg0) {
-					for (int i = 0; i < table.getColumnCount(); i++) {
-						InitializeAutoResizeColumnsCommand columnCommand = new InitializeAutoResizeColumnsCommand(table,
-								i, table.getConfigRegistry(), new GCFactory(table));
-						table.doCommand(columnCommand);
-					}
-					for (int i = 0; i < table.getRowCount(); i++) {
-						InitializeAutoResizeRowsCommand rowCommand = new InitializeAutoResizeRowsCommand(table, i,
-								table.getConfigRegistry(), new GCFactory(table));
-						table.doCommand(rowCommand);
-					}
-					table.removeListener(SWT.Paint, this);
-			        goToInsertRow();
-				}
-			});
-			table.configure();
-			return;
-		}		
-		
 		dataProvider = new DataProvider();
 		headingProvider = new HeadingProvider();
 
@@ -806,18 +394,16 @@ public class Grid extends Composite {
 			@Override
 			public void accumulateConfigLabels(LabelStack configLabels, int columnPosition, int rowPosition) {
 				configLabels.addLabel("column" + columnPosition);
-				// add column?
-				if (columnPosition >= getColumnCount())
-					configLabels.addLabel("addColumn");
+				/*
 				// error?
-				else if (dataProvider.getError(rowPosition) != null)
+				if (dataProvider.getError(rowPosition) != null)
 					configLabels.addLabel("error");
 				// changed?
 				else if (dataProvider.isChanged(columnPosition, rowPosition))
 					configLabels.addLabel("changed");
-				// RVA?
 				else if (dataProvider.isRVA(columnPosition))
 					configLabels.addLabel("RVAeditor");
+				*/
 			}
 		}
 
@@ -828,13 +414,15 @@ public class Grid extends Composite {
 		class HeadingLabelAccumulator implements IConfigLabelAccumulator {
 			@Override
 			public void accumulateConfigLabels(LabelStack configLabels, int columnPosition, int rowPosition) {
+				/*
 				if (keys != null && keys.size() > 0) {
-					if (rowPosition == 0 && keys.get(0).contains(getAttributeNameAt(columnPosition)))
+					if (rowPosition == 0 && keys.get(0).contains(heading[columnPosition].getName()))
 						configLabels.addLabel("keycolumnintegrated");
 					else if (rowPosition >= 2 && keys.size() > 1
-							&& keys.get(rowPosition - 1).contains(getAttributeNameAt(columnPosition)))
+							&& keys.get(rowPosition - 1).contains(heading[columnPosition].getName()))
 						configLabels.addLabel("keycolumnalone");
 				}
+				*/
 			}
 		}
 
@@ -842,8 +430,8 @@ public class Grid extends Composite {
 		HeadingLabelAccumulator columnLabelAccumulator = new HeadingLabelAccumulator();
 		headingDataLayer.setConfigLabelAccumulator(columnLabelAccumulator);
 
-		table = new NatTable(this, gridLayer, false);
-
+		table = new NatTable(parent, gridLayer, false);
+		
 		// Put cursor in table when it's initialised.
 		table.addPaintListener(new PaintListener() {
 		    @Override
@@ -852,7 +440,7 @@ public class Grid extends Composite {
 		        goToInsertRow();
 		    }
 		});		
-		
+
 		DefaultNatTableStyleConfiguration defaultStyle = new DefaultNatTableStyleConfiguration();
 		table.addConfiguration(defaultStyle);
 		table.addConfiguration(new EditorConfiguration());
@@ -861,37 +449,27 @@ public class Grid extends Composite {
 		ContributionItem columnMenuItems = new ContributionItem() {
 			@Override
 			public void fill(Menu menu, int index) {
-				MenuItem doesPopupEdit = new MenuItem(menu, SWT.CHECK);
-				doesPopupEdit.setText("Pop-up Edit Box");
-				doesPopupEdit.setImage(IconLoader.loadIcon("popup"));
-				doesPopupEdit.setSelection(popupEdit);
-				doesPopupEdit.addListener(SWT.Selection, e -> {
+				/*
+				IconMenuItem doesPopupEdit = new IconMenuItem(menu, "Pop-up Edit Box", "popup", SWT.CHECK, e -> {
 					popupEdit = !popupEdit;
 					table.addConfiguration(new PopupEditorConfiguration());
 					table.configure();
 				});
-				MenuItem export = new MenuItem(menu, SWT.PUSH);
-				export.setText("Export");
-				export.setImage(IconLoader.loadIcon("export"));
-				export.addListener(SWT.Selection, e -> export());
+				doesPopupEdit.setSelection(popupEdit);
+				*/
 			}
 		};
+		
 		table.addConfiguration(new MenuConfiguration(GridRegion.COLUMN_HEADER,
 				new PopupMenuBuilder(table).withContributionItem(columnMenuItems)));
 
 		ContributionItem rowMenuItems = new ContributionItem() {
 			@Override
 			public void fill(Menu menu, int index) {
-				MenuItem doesDelete = new MenuItem(menu, SWT.PUSH);
-				doesDelete.setText("Delete");
-				doesDelete.setImage(IconLoader.loadIcon("table_row_delete"));
-				doesDelete.addListener(SWT.Selection, e -> askDeleteSelected());
-				MenuItem export = new MenuItem(menu, SWT.PUSH);
-				export.setText("Export");
-				export.setImage(IconLoader.loadIcon("export"));
-				export.addListener(SWT.Selection, e -> export());
+				// new IconMenuItem(menu, "Delete", "table_row_delete", SWT.PUSH, e -> askDeleteSelected());
 			}
 		};
+		
 		table.addConfiguration(new MenuConfiguration(GridRegion.ROW_HEADER,
 				new PopupMenuBuilder(table).withContributionItem(rowMenuItems)));
 
@@ -952,6 +530,7 @@ public class Grid extends Composite {
 
 			@Override
 			protected String getText(Event event) {
+				/*
 				int x = table.getColumnPositionByX(event.x);
 				int y = table.getRowPositionByY(event.y);
 				ILayerCell cell = table.getCellByPosition(x, y);
@@ -959,6 +538,8 @@ public class Grid extends Composite {
 					return null;
 				int row = cell.getRowIndex();
 				return dataProvider.getError(row);
+				*/
+				return "tooltip";
 			}
 
 			@Override
@@ -970,27 +551,15 @@ public class Grid extends Composite {
 		};
 	}
 
-	public void setData(GridData data) {
-		if (table != null)
-			table.dispose();
-		this.data = data;
-		init();
-	}
-	
-	public void export() {
-		ExportCommand cmd = new ExportCommand(table.getConfigRegistry(), table.getShell());
-		table.doCommand(cmd);
-	}
-
 	public void processDirtyRows() {
-		dataProvider.processDirtyRows();
+//		dataProvider.processDirtyRows();
 		lastRowSelected = -1;
 	}
 
 	public int countDirtyRows() {
-		if (dataProvider == null)
+//		if (dataProvider == null)
 			return 0;
-		return dataProvider.countDirtyRows();
+//		return dataProvider.countDirtyRows();
 	}
 
 	private void editorBeenOpened(int row, int column) {
@@ -1043,8 +612,10 @@ public class Grid extends Composite {
 
 	private void doDeleteSelected() {
 		Set<Range> selections = gridLayer.getBodyLayer().getSelectionLayer().getSelectedRowPositions();
+		/*
 		if (dataProvider != null)
 			dataProvider.deleteRows(selections);
+		*/
 	}
 
 	public void askDeleteSelected() {
@@ -1053,6 +624,7 @@ public class Grid extends Composite {
 		if (countDirtyRows() > 0 && !MessageDialog.openConfirm(table.getShell(), "Unsaved Changes",
 				"There are unsaved changes. If you proceed with deletion, they will be cancelled.\n\nPress OK to cancel unsaved changes and proceed with deletion."))
 			return;
+		/*
 		if (askDeleteConfirm) {
 			int selectedRowCount = gridLayer.getBodyLayer().getSelectionLayer().getSelectedRowCount();
 			DeleteConfirmDialog deleteConfirmDialog = new DeleteConfirmDialog(table.getShell(), selectedRowCount,
@@ -1063,6 +635,7 @@ public class Grid extends Composite {
 			}
 		} else
 			doDeleteSelected();
+		*/
 	}
-	
+
 }
